Fixed spacing on flex-wrap.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,6 +130,7 @@ h2 {
   align-items: center;
   box-sizing: border-box;
   margin: 0px 30px;
+  margin-bottom: 60px;
   background-color: white;
   width: 250px;
   min-width: 200px;
